fixup! Adjust browser icons display and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -222,6 +222,7 @@ section {
 
 .browser-icon {
   width: 20%;
+  height: 20%;
   max-width: 128px;
 }
 
